lang/checker/tests/cases/fail/resolve-type-match/tables/intrinsic_conflict.slt
type A = {
	[string]: number,
	foo: string,
}
local sample: A = {
	foo = "bar",
	cool = 1,
}